--- a/views/layout.html
+++ b/views/layout.html
@@ -1,53 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <title>{% block title %}拼车顾客管理{% endblock %}</title>
-  <link rel="stylesheet" href="/layout.css">
-  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
-  <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
-  {% block script %}
-
-  {% endblock %}
-  
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<title>{% block title %}拼车顾客管理{% endblock %}</title>
+	<link rel="stylesheet" href="/layout.css">
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
+	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 </head>
 <body class="ui-mobile-viewport ui-overlay-a">
-<div data-role="page">
-	<div data-role="header" data-position="fixed" style="position: absolute;padding:0;margin:0"> 
-		<a href="#defaultpanel" data-role="button" data-icon="bars" data-iconpos="notext">菜单</a>
-        <h1>拼车顾客管理</h1>
-        {% block retrunButton %}
-
-      	{% endblock %}
-    </div>
-    <div data-role="content" id="content" style="overflow: scroll;">
-	    
-			  {% block content %}
-			    <p>Missing content!</p>
-			  {% endblock %}
+	<div data-role="page" id="pageone">
+		<div data-role="header" data-position="fixed" style="padding:0;margin:0"> 
+			{% set foo = { pagename: "显示所有行程" } %}
+			{% include 'snippets/header.html' with foo %}
+			{% block pageone_header %}{% endblock %}
+		</div>
+		<div data-role="content" id="pageone_content" style="overflow: scroll;">
+			{% block pageone_content %}{% endblock %}
+		</div> 
+		{% include 'snippets/panel.html' %}
+		{% include 'snippets/footer.html' %}
+	</div>
 	
-	</div> 
-    <div data-role="panel" id="defaultpanel" data-theme="b"> 
-       
-      <div class="panel-content"> 
+	<div data-role="page" id="pagetwo">
+		<div data-role="header" data-position="fixed" style="padding:0;margin:0"> 
+			{% set foo = { pagename: "显示所有车主" } %}
+			{% include 'snippets/header.html' with foo %}
+			{% block pagetwo_header %}{% endblock %}
+		</div>
+		<div data-role="content" id="pagetwo_content" style="overflow: scroll;">
+			{% block pagetwo_content %}{% endblock %}
+		</div> 
+		{% include 'snippets/panel.html'%}
+		{% include 'snippets/footer.html'%}
+	</div>
 
-      	<ul data-role="listview" data-icon="false">
-      		<li><a href="#demo-links" data-rel="close"> 关闭窗口</a></li>
-		    <li><a href="#">关于我们</a></li>
-		</ul>
-        
-      </div> 
-                    
-    </div>
-    <div data-role="footer" data-position="fixed" style="position: absolute;padding:0;margin:0"> 
-		<p>Created By: 小黑工作室</p>
-    </div>
-</div>
-	
-
-	
 </body>
 </html>
