--- a/views/index.html
+++ b/views/index.html
@@ -1,62 +1,74 @@
 {% extends 'layout.html' %}
 
-{% block title %}创建一个行程{% endblock %}
+<!-- 
+页面被打开时 会创建两个page,对应着panel导航里面的两个button的连接
+该页面会继承layout页面
+-->
 
+<!-- pageone 的继承 -->
 {% block pageone_header %}
- <a href="/bookingcar/new" data-role="button" data-icon="plus" data-iconpos="notext">test</a>
+<a href="/bookingcar/newrouteorder" data-role="button" data-icon="plus" data-iconpos="notext">test</a>
 {% endblock %}
- 
+{% set foo = { pagename: "显示所有行程" } %}
 {% block pageone_content %}
-  <p>现在已经有 <strong>{{ bookingcar.length }}</strong>车辆 准备出发</p> 
-   
-  <h2>所有行程</h2>
-  <ul data-role="collapsible-set" data-inset="true" data-filter="true" style="margin:0;padding:0">
-    {% for carowner in bookingcar %}
-        <div data-role="collapsible">
-          <h1>{{ carowner.car.carName }}, 出发时间: {{ carowner.setoffTime }}, 剩余座位:{{ carowner.car.carSeatsCount - carowner.customer.length }}</h1>
-           <p>
-              途经: {{ carowner.routePoint }}</br>
-              <a href="/bookingcar/{{ bookingcar._id.toString() }}"> 查看详情</a>
-              <a href="/bookingcar/edit/{{ bookingcar._id.toString() }}"> 修改行程</a>
-              <a href="#popupdelete" data-rel="popup" data-position-to="window" data-transition="pop"> 删除行程</a>
-              <div data-role="popup" id="popupdelete" data-theme="a" class="ui-corner-all">
-                  <form action="/bookingcar/delete/{{ bookingcar._id.toString()}}">
-                      <div style="padding:10px 20px;">
-                          <h3>请输入管理员密码</h3>
-                          <label for="pw" class="ui-hidden-accessible">Password:</label>
-                            <input type="password" name="pass" id="pw" value="" placeholder="请输入管理员密码" data-theme="a">
-                          <button type="submit">删除</button>
-                      </div>
-                  </form>
-              </div>
-           </p>
-        </div>
-    {% endfor %}
-  </ul>
-  
-{% endblock %}
- 
 
+
+<!-- 计算订单数量＝车主的订单数量的合 -->
+
+<p>现在已经有 <strong>{{ routeOrders.length }}</strong>行程 准备出发</p> 
+
+<h2>所有行程</h2>
+<ul data-role="collapsible-set" data-inset="true" data-filter="true" style="margin:0;padding:0">
+{% for owner in carOwner %}
+  {% for orderid in owner.routeOrder %}
+      {% for order in routeOrders %}
+          {% if orderid.routeOrderId == order._id.toString() %}
+            <div data-role="collapsible">
+      
+              <h1>{{ owner.carOwnerName }} 终点:{{ order.destination }}</h1>
+              <p>
+                途经: {{ order.routePoint }}</br>
+                <a href="/bookingcar/showrouteorder/{{ order._id.toString() }}/{{ owner._id.toString() }}"> 查看详情</a>
+                <a href="/bookingcar/edit/{{ routeOrder._id.toString() }}"> 修改行程</a>
+                <a href="#popupdelete" data-rel="popup" data-position-to="window" data-transition="pop"> 删除行程</a>
+                <div data-role="popup" id="popupdelete" data-theme="a" class="ui-corner-all">
+                      <form action="/bookingcar/delete/{{ bookingcar._id.toString()}}">
+                            <div style="padding:10px 20px;">
+                                  <h3>请输入管理员密码</h3>
+                                  <label for="pw" class="ui-hidden-accessible">Password:</label>
+                                    <input type="password" name="pass" id="pw" value="" placeholder="请输入管理员密码" data-theme="a">
+                                  <button type="submit">删除</button>
+                            </div>
+                      </form>
+                </div>
+              </p>
+      
+            </div>
+          {% endif %}
+      {% endfor %}
+  {% endfor %}
+{% endfor %}
+</ul>
+{% endblock %}
+
+<!-- pagetwo的继承 -->
 {% block pagetwo_header %}
-   <a href="/bookingcar/new" data-role="button" data-icon="plus">test</a>
+<a href="/bookingcar/newowner" data-role="button" data-icon="plus">test</a>
 {% endblock %}
-
+{% set foo = { pagename: "显示所有车主" } %}
 {% block pagetwo_content %}
-  <script type="text/javascript">
-    $.mobile.changePage("#pagetwo");
-  </script>
-  <p>现在已经有 <strong>{{ bookingcar.length }}</strong>车主已注册</p> 
-   
-  <h2>所有车主</h2>
-  <ul data-role="collapsible-set" data-inset="true" data-filter="true" style="margin:0;padding:0">
-    {% for carowner in bookingcar %}
-        <div data-role="collapsible">
-          <h1>{{ carowner.carOwnerName }}</h1>
-           <p>
-              <a href="/bookingcar/{{ bookingcar._id.toString() }}"> 查看车主详情</a>
-              <a href="/bookingcar/edit/{{ bookingcar._id.toString() }}"> 修改车主信息</a>
-           </p>
-        </div>
-    {% endfor %}
-  </ul>
+<p>现在已经有 <strong>{{ carOwner.length }}</strong>车主已注册</p> 
+
+<h2>所有车主</h2>
+<ul data-role="collapsible-set" data-inset="true" data-filter="true" style="margin:0;padding:0">
+  {% for owner in carOwner %}
+  <div data-role="collapsible">
+    <h1>{{ owner.carOwnerName }}</h1>
+    <p>
+      <a href="/bookingcar/{{ bookingcar._id.toString() }}"> 查看车主详情</a>
+      <a href="/bookingcar/edit/{{ bookingcar._id.toString() }}"> 修改车主信息</a>
+    </p>
+  </div>
+  {% endfor %}
+</ul>
 {% endblock %}
