--- a/views/layout.html
+++ b/views/layout.html
@@ -9,11 +9,12 @@
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+	
 </head>
 <body class="ui-mobile-viewport ui-overlay-a">
 
 	<!-- pageone 用来当作主页面的的各种操作的跳转 -->
-	<div data-role="page" id="pageone">
+	<div data-role="page" id="pageone" name="pageone" data-dom-cache＝"false">
 		<div data-role="header" data-position="fixed" style="padding:0;margin:0"> 
 			<!-- header页面会根据foo的值变化而动态变化 -->
 			{% include 'snippets/header.html' with foo %}
@@ -29,10 +30,11 @@
 		{% include 'snippets/footer.html' %}
 	</div>
 	<!-- pagetwo 主要负责点击panel 菜单后的页面跳转的初始化 -->
-	<div data-role="page" id="pagetwo">
+	<div data-role="page" id="pagetwo" data-cache="false" name="pagetwo" data-dom-cache＝"false">
+		
 		<div data-role="header" data-position="fixed" style="padding:0;margin:0"> 
 			<!-- header页面会根据foo的值变化而动态变化 -->
-			{% include 'snippets/header.html' with foo %}
+			{% include 'snippets/header.html' with x %}
 			<!-- swig 语法用来负责子类继承 -->
 			{% block pagetwo_header %}{% endblock %}
 		</div>
