--- a/views/showrouteorder.html
+++ b/views/showrouteorder.html
@@ -12,7 +12,7 @@
 
   <div class="ui-grid-b" >
       <div class="ui-block-a"><span><b>车主称呼:</b> {{ carOwner.carOwnerName }} </span></div>
-      <div class="ui-block-b"><span><b>车牌尾号:</b> {{ routeOrder.carNumberPlate }}</span></div>
+      <div class="ui-block-b"><span><b>车牌尾号:</b> {{ carOwner.car.carNumberPlate }}</span></div>
   </div>
   <div class="ui-grid-b" >
       <div class="ui-block-a"><span><b>车    型:</b> {{ carOwner.car.carName }}</span></div>
