--- a/views/makeorder.html
+++ b/views/makeorder.html
@@ -8,7 +8,7 @@
 
 {% block pageone_content %}
   <h1>请填写您的联系信息</h1>
-   <form action="/bookingcar/updateOrder" method="post">
+   <form action="/bookingcar/updateorder" method="post">
     <p><input type="hidden" value="{{ routeOrder._id.toString() }}" name="id"></p>
     <p><input type="hidden" value="{{ carOwnerId }}" name="carOwnerId"></p>
     <p><input type="text" placeholder="称呼"  name="CustomerName" id="CustomerName"></p>
