--- a/views/snippets/panel.html
+++ b/views/snippets/panel.html
@@ -4,8 +4,8 @@
 
 		<ul data-role="listview" data-icon="false">
 			<li><a href="#demo-links" data-rel="close"> 关闭窗口</a></li>
-			<li><a href="#pageone" id="routeownermgmt"> 行程管理</a></li>
-			<li><a href="#pagetwo" id="carownermgmt"> 车主管理</a></li>
+			<li><a href="#pageone" > 行程管理</a></li>
+			<li><a href="#pagetwo" > 车主管理</a></li>
 			<li><a href="#">关于我们</a></li>
 		</ul>
 
