--- a/views/editrouteorder.html
+++ b/views/editrouteorder.html
@@ -2,26 +2,23 @@
 
 {% block title %}行程信息修改{% endblock %}
 
-{% block retrunButton %}
-  <!-- <a href="/" data-role="button" data-icon="back"  class="ui-btn-right"></a>  -->
-  <a href="/" data-role="button" data-icon="back" data-iconpos="notext">返回</a>
+{% block pageone_header %}
+<a href="/">Home</a>
+<h1>修改行程信息</h1>
+<a href=""  data-rel="back">返回</a>
 {% endblock %}
 
-{% block content %}
-  <p><font color="#FF0000">注意: 修改行程会取消所有订单,修改行程前请先通知乘客</font></p>
-  <form action="/todo/update" method="post">
-   <input type="hidden" value="{{ todo._id.toString() }}" name="id">
-   <input type="text" value="{{ todo.carOwnerName}}" placeholder="车主姓名" name="CarOwnerName" />
-   <input type="text" value="{{ todo.car.carNumberPlate}}" placeholder="车牌(车牌尾号)" name="CarNumberPlate" />
-   <input type="text" value="{{ todo.car.carName}}" placeholder="车辆名称(例:标致508)" name="CarName" />
-   <input type="text" value="{{ todo.car.carColor}}" placeholder="车辆颜色" name="CarColor" />
-   <input type="text" value="{{ todo.mobilePhone}}" placeholder="手机" name="MobilePhone" />
-   <input type="text" placeholder="出发日期" onfocus="this.type='date';this.setAttribute('onfocus','');this.blur();this.focus();" name="SetoffDate"/>
-    <input type="text" placeholder="出发时间" onfocus="this.type='time';this.setAttribute('onfocus','');this.blur();this.focus();" name="SetoffTime" />
-   <input type="text" value="{{ todo.destination}}" placeholder="终点" name="Destination" />
-   <textarea cols="40" rows="5" name="RoutePoint">{{ todo.routePoint}}</textarea>
-   <input type="text" value="{{ todo.car.carSeatsCount}}" placeholder="空余座位" name="CarSeatsCount" value="4"/>
-   <input type="text" value="{{ todo.description}}" placeholder="备注" name="description" />
-   <input type="submit" value="修改" />
-  </form>
+{% block pageone_content %}
+<!-- <p><font color="#FF0000">注意: 修改行程会取消所有订单,修改行程前请先通知乘客</font></p> -->
+<form action="/bookingcar/updaterouteorder" method="post">
+ <input type="hidden" value="{{ routeOrder._id.toString() }}" name="id">
+ <!-- <input type="text" value="{{ carOwner.mobilePhone}}" placeholder="手机" name="MobilePhone" /> -->
+ <input type="text" value="{{ routeOrder.setoffDate }}" placeholder="出发日期" onfocus="this.type='date';this.setAttribute('onfocus','');this.blur();this.focus();" name="SetoffDate"/>
+ <input type="text" value="{{ routeOrder.setoffTime }}" placeholder="出发时间" onfocus="this.type='time';this.setAttribute('onfocus','');this.blur();this.focus();" name="SetoffTime" />
+ <input type="text" value="{{ routeOrder.destination}}" placeholder="终点" name="Destination" />
+ <textarea cols="40" rows="5" name="RoutePoint">{{ routeOrder.routePoint}}</textarea>
+ <input type="text" value="{{ routeOrder.carSeatsCount}}" placeholder="空余座位" name="CarSeatsCount" value="4"/>
+ <input type="text" value="{{ routeOrder.description}}" placeholder="备注" name="description" />
+ <input type="submit" value="修改" />
+</form>
 {% endblock %}
