--- a/views/newcarowner.html
+++ b/views/newcarowner.html
@@ -5,9 +5,12 @@
 {% block title %}创建一个车主{% endblock %}
 
 {% block pageone_header %}
-<a href="/" data-role="button" data-icon="back" data-iconpos="notext">返回</a>
+<a href="/">Home</a>
+<h1>创建一个车主</h1>
+<a href=""  data-rel="back">返回</a>
+<!-- <a href="" data-role="button"  data-icon="back" data-iconpos="notext">返回</a> -->
 {% endblock %}
-{% set foo = { pagename: "创建一个车主" } %}
+
 {% block pageone_content %}
   <form action="/bookingcar/createowner" method="post">
      <input type="text" placeholder="车主姓名" name="CarOwnerName" />
