--- a/views/index.html
+++ b/views/index.html
@@ -1,78 +1,12 @@
 {% extends 'layout.html' %}
 
-<!-- 
-页面被打开时 会创建两个page,对应着panel导航里面的两个button的连接
-该页面会继承layout页面
--->
-
-<!-- pageone 的继承 -->
 {% block pageone_header %}
-<a href="/bookingcar/newrouteorder" data-role="button" data-icon="plus" data-iconpos="notext">test</a>
+<h1>拼车顾客管理系统</h1>
 {% endblock %}
-{% set foo = { pagename: "显示所有行程" } %}
+
 {% block pageone_content %}
-
-<p>现在已经有 <strong>{{ routeOrders.length }}</strong>行程 准备出发</p> 
-
-<h2>所有行程</h2>
-<ul data-role="listview" data-filter="true" data-inset="true">
-{% for owner in carOwner %}
-  {% for orderid in owner.routeOrder %}
-      {% for order in routeOrders %}
-          {% if orderid.routeOrderId == order._id.toString() %}
-            <div data-role="collapsible" style="margin:0;padding:0">
-      
-              <h1>{{ owner.carOwnerName }} 终点:{{ order.destination }}</h1>
-              <p>
-                途经: {{ order.routePoint }}</br>
-                <a href="/bookingcar/routeorder/{{ order._id.toString() }}/{{ owner._id.toString() }}"> 查看详情</a>
-                <a href="/bookingcar/routeorder/edit/{{ routeOrder._id.toString() }}"> 修改行程</a>
-                <a href="#popupdelete" data-rel="popup" data-position-to="window" data-transition="pop"> 删除行程</a>
-                <div data-role="popup" id="popupdelete" data-theme="a" class="ui-corner-all">
-                      <form action="/bookingcar/delete/{{ routeOrder._id.toString()}}">
-                            <div style="padding:10px 20px;">
-                                  <h3>请输入管理员密码</h3>
-                                  <label for="pw" class="ui-hidden-accessible">Password:</label>
-                                    <input type="password" name="pass" id="pw" value="" placeholder="请输入管理员密码" data-theme="a">
-                                  <button type="submit">删除</button>
-                            </div>
-                      </form>
-                </div>
-              </p>
-      
-            </div>
-          {% endif %}
-      {% endfor %}
-  {% endfor %}
-{% endfor %}
+<ul data-role="listview">
+      <li><a href="/listrouteorder"  data-transition="slide" >显示所有行程</a></li>
+      <li><a href="/listcarowner"  data-transition="slide"  >显示所有车主</a></li>
 </ul>
-{% endblock %}
-
-<!-- pagetwo的继承 -->
-{% block pagetwo_header %}
-<a href="/bookingcar/newcarowner" data-role="button" data-icon="plus" data-iconpos="notext"></a>
-{% endblock %}
-{% set x = { pagename: "显示所有车主" } %}
-{% block pagetwo_content %}
-
-<p>现在已经有 <strong>{{ carOwner.length }}</strong>车主已注册</p> 
-<h2>所有车主</h2>
-
-<ul data-role="listview" data-filter="true" id="lista">
-  
-  {% for owner in carOwner %}
-
-    <div data-role="collapsible" style="margin:0;padding:0">
-      <h1>{{ owner.carOwnerName }}</h1>
-      <p>
-        <a href="/bookingcar/carowner/{{ owner._id.toString() }}"> 查看详情</a>
-        <a href="/bookingcar/carowner/edit/{{ owner._id.toString() }}"> 修改信息</a>
-        <a href="/bookingcar/carowner/delete/{{ owner._id.toString() }}"> 删除信息</a>
-      </p>
-    </div>
-  
-  {% endfor %}
-
-</ul>
-
 {% endblock %}
