--- a/views/layout.html
+++ b/views/layout.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	<title>{% block title %}拼车顾客管理{% endblock %}</title>
+	<title>{% block title %}{% endblock %}</title>
 	<link rel="stylesheet" href="/layout.css">
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
@@ -13,10 +13,8 @@
 <body class="ui-mobile-viewport ui-overlay-a">
 
 	<!-- pageone 用来当作主页面的的各种操作的跳转 -->
-	<div data-role="page" id="pageone" name="pageone" data-dom-cache＝"false">
+	<div data-role="page" id="pageone" name="pageone" data-dom-cache＝"false" data-add-back-btn="true" >
 		<div data-role="header" data-position="fixed" style="padding:0;margin:0"> 
-			<!-- header页面会根据foo的值变化而动态变化 -->
-			{% include 'snippets/header.html' with foo %}
 			<!-- swig 语法用来负责子类继承 -->
 			{% block pageone_header %}{% endblock %}
 		</div>
@@ -25,27 +23,10 @@
 			{% block pageone_content %}{% endblock %}
 		</div> 
 		<!-- swig 语法加入html标签碎片 主要为了使html标签重用 -->
-		{% include 'snippets/panel.html' %}
 		{% include 'snippets/footer.html' %}
 	</div>
 	<!-- pagetwo 主要负责点击panel 菜单后的页面跳转的初始化 -->
-	<div data-role="page" id="pagetwo" data-cache="false" name="pagetwo" data-dom-cache＝"false">
-		
-		<div data-role="header" data-position="fixed" style="padding:0;margin:0"> 
-			<!-- header页面会根据foo的值变化而动态变化 -->
-			{% include 'snippets/header.html' with x %}
-			
-			<!-- swig 语法用来负责子类继承 -->
-			{% block pagetwo_header %}{% endblock %}
-		</div>
-		<div data-role="content" id="pagetwo_content"  style="overflow: scroll;">
-			<!-- swig 语法用来负责子类继承 -->
-			{% block pagetwo_content %}{% endblock %}
-		</div> 
-		<!-- swig 语法加入html标签碎片 主要为了使html标签重用 -->
-		{% include 'snippets/panel.html'%}
-		{% include 'snippets/footer.html'%}
-	</div>
+
 
 </body>
 </html>
