--- a/views/makeorder.html
+++ b/views/makeorder.html
@@ -3,7 +3,10 @@
 {% block title %}顾客信息录入{% endblock %}
 
 {% block pageone_header %}
-  <a href="/" data-role="button" data-icon="back" data-iconpos="notext">返回</a>
+<a href="/">Home</a>
+<h1>显示所有车主</h1>
+<a href=""  data-rel="back">返回</a>
+  <!-- <a href="" data-role="button" data-rel="back" data-icon="back" data-iconpos="notext">返回</a> -->
 {% endblock %}
 
 {% block pageone_content %}
