--- a/views/layout.html
+++ b/views/layout.html
@@ -14,7 +14,7 @@
 
 	<!-- pageone 用来当作主页面的的各种操作的跳转 -->
 	<div data-role="page" id="pageone" name="pageone" data-dom-cache＝"false" data-add-back-btn="true" >
-		<div data-role="header" data-position="fixed" style="padding:0;margin:0"> 
+		<div data-role="header" data-position="fixed" style="padding:0;margin:0"  data-theme="d"> 
 			<!-- swig 语法用来负责子类继承 -->
 			{% block pageone_header %}{% endblock %}
 		</div>
