修改了header在微信浏览器 显示上的问题。

--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,8 @@
 {% extends 'layout.html' %}
 
 {% block pageone_header %}
-<h1>拼车顾客管理系统</h1>
+<h1 style="display:none">拼车顾客管理系统</h1>
+<h1></h1>
 {% endblock %}
 
 {% block pageone_content %}
