--- a/views/showrouteorder.html
+++ b/views/showrouteorder.html
@@ -1,10 +1,8 @@
 {% extends 'layout.html' %}
 
-{% block title %}{{ routeOrder.name }}{% endblock %}
-
 {% block pageone_header %}
 <a href="/">Home</a>
-<h1>显示所有车主</h1>
+<h1>显示行程详情</h1>
 <a href=""  data-rel="back">返回</a>
 <!-- <a href="" data-role="button"  data-icon="back" data-iconpos="notext">返回</a> -->
 {% endblock %}
