去掉页面的 back button

--- a/views/layout.html
+++ b/views/layout.html
@@ -13,7 +13,7 @@
 <body class="ui-mobile-viewport ui-overlay-a">
 
 	<!-- pageone 用来当作主页面的的各种操作的跳转 -->
-	<div data-role="page" id="pageone" name="pageone" data-dom-cache＝"false" data-add-back-btn="true" >
+	<div data-role="page" id="pageone" name="pageone">
 		<div data-role="header" data-position="fixed" style="padding:0;margin:0"  data-theme="d"> 
 			<!-- swig 语法用来负责子类继承 -->
 			{% block pageone_header %}{% endblock %}
