使用jmq1.4.5 下载了static 文件 重新修改了 theme 为select 增加了filter

--- a/views/snippets/footer.html
+++ b/views/snippets/footer.html
@@ -1,3 +1,3 @@
-<div data-role="footer" data-position="fixed" style="padding:0;margin:0" data-theme="d"> 
+<div data-role="footer" data-position="fixed" style="padding:0;margin:0" data-theme="a"> 
 	<p>Created By: 小黑工作室</p>
 </div>
