--- a/views/layout.html
+++ b/views/layout.html
@@ -6,22 +6,44 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<title>拼车顾客管理系统</title>
 	<link rel="stylesheet" href="/layout.css">
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
+	<link rel="stylesheet" href="js/jquery.mobile-1.4.5.min.css">
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+	<script src="js/jquery.mobile-1.4.5.min.js"></script>
+	<style type="text/css">
+		.ui-selectmenu.ui-popup .ui-input-search {
+		    margin-left: .5em;
+		    margin-right: .5em;
+		}
+		.ui-selectmenu.ui-dialog .ui-content {
+		    padding-top: 0;
+		}
+		.ui-selectmenu.ui-dialog .ui-selectmenu-list {
+		    margin-top: 0;
+		}
+		.ui-selectmenu.ui-popup .ui-selectmenu-list li.ui-first-child .ui-btn {
+		    border-top-width: 1px;
+		    -webkit-border-radius: 0;
+		    border-radius: 0;
+		}
+		.ui-selectmenu.ui-dialog .ui-header {
+		    border-bottom-width: 1px;
+		}
+	</style>
+
+	
 </head>
 <body class="ui-mobile-viewport ui-overlay-a">
 
 	<!-- pageone 用来当作主页面的的各种操作的跳转 -->
 	<div data-role="page" id="pageone" name="pageone">
-		<div data-role="header" data-position="fixed" style="padding:0;margin:0"  data-theme="d"> 
+		<div data-role="header" data-position="fixed" style="padding:0;margin:0"  data-theme="a"> 
 			<!-- swig 语法用来负责子类继承 -->
 			{% block pageone_header %}{% endblock %}
 		</div>
 		<div data-role="content" id="pageone_content" style="overflow: scroll;">
 			<!-- swig 语法用来负责子类继承 -->
 			{% block pageone_content %}{% endblock %}
-		</div> 
+		</div>
 		<!-- swig 语法加入html标签碎片 主要为了使html标签重用 -->
 		{% include 'snippets/footer.html' %}
 	</div>
