--- a/views/layout.html
+++ b/views/layout.html
@@ -6,9 +6,9 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<title>拼车顾客管理系统</title>
 	<link rel="stylesheet" href="/layout.css">
-	<link rel="stylesheet" href="js/jquery.mobile-1.4.5.min.css">
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-	<script src="js/jquery.mobile-1.4.5.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<style type="text/css">
 		.ui-selectmenu.ui-popup .ui-input-search {
 		    margin-left: .5em;
@@ -29,8 +29,6 @@
 		    border-bottom-width: 1px;
 		}
 	</style>
-
-	
 </head>
 <body class="ui-mobile-viewport ui-overlay-a">
 
