只能加不能改 不能删

--- a/views/listcarowner.html
+++ b/views/listcarowner.html
@@ -19,8 +19,8 @@
       <h1>{{ owner.carOwnerName }}</h1>
       <p>
         <a href="/bookingcar/carowner/{{ owner._id.toString() }}"> 查看详情</a>
-        <a href="/bookingcar/carowner/edit/{{ owner._id.toString() }}"> 修改信息</a>
-        <a href="/bookingcar/carowner/delete/{{ owner._id.toString() }}"> 删除信息</a>
+        <!-- <a href="/bookingcar/carowner/edit/{{ owner._id.toString() }}"> 修改信息</a> -->
+        <!-- <a href="/bookingcar/carowner/delete/{{ owner._id.toString() }}"> 删除信息</a> -->
       </p>
     </div>
   
