--- a/views/listrouteorder.html
+++ b/views/listrouteorder.html
@@ -21,8 +21,8 @@
               <p>
                 途经: {{ order.routePoint }}</br>
                 <a href="/bookingcar/routeorder/{{ order._id.toString() }}/{{ owner._id.toString() }}"> 查看详情</a>
-                <a href="/bookingcar/routeorder/edit/{{ order._id.toString() }}/{{ owner._id.toString() }}"> 修改行程</a>
-                <a href="/bookingcar/routeorder/delete/{{ order._id.toString() }}/{{ owner._id.toString() }}"> 删除行程</a>
+                <!-- <a href="/bookingcar/routeorder/edit/{{ order._id.toString() }}/{{ owner._id.toString() }}"> 修改行程</a> -->
+                <!-- <a href="/bookingcar/routeorder/delete/{{ order._id.toString() }}/{{ owner._id.toString() }}"> 删除行程</a> -->
               </p>
             </div>
           {% endif %}
