--- a/views/snippets/footer.html
+++ b/views/snippets/footer.html
@@ -1,3 +1,3 @@
 <div data-role="footer" data-position="fixed" style="padding:0;margin:0" data-theme="a"> 
-	<p>Created By: 小黑工作室</p>
+	<p>Created By: 小黑</p>
 </div>
